# nn_profiler

./: README.md  network_config.json  validate_config.py
configs/: alexnet_config.json  lenet5_config.json  resnet34_config.json  vggnet16_config.json  vggnet19_config.json
cpp/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  CustomDataset.h  CustomNetworks.h  InferenceProfiler.cpp  TrainingProfiler.cpp  main.cpp
python/: constructor.py  inference.py  parameter_parser.py  profiler.py  test.py  training.py
